Updated headshot and css

--- a/styles/post-17.css
+++ b/styles/post-17.css
@@ -2599,7 +2599,7 @@ body.rtl .elementor-17 .elementor-element.elementor-element-1b7621c7 {
 
 .elementor-17 .elementor-element.elementor-element-793980db .profile-card, .elementor-17 .elementor-element.elementor-element-793980db .profile-image-card {
     background-color: var( --e-global-color-accent);
-    border-radius: 30px 30px 30px 30px;
+    border-radius: 15px;
 }
 
 .elementor-17 .elementor-element.elementor-element-793980db .profile-card:hover, .elementor-17 .elementor-element.elementor-element-793980db .profile-image-card:hover, .elementor-17 .elementor-element.elementor-element-793980db .profile-card::before, .elementor-17 .elementor-element.elementor-element-793980db .profile-image-card::before, .elementor-17 .elementor-element.elementor-element-793980db div .profile-card .profile-body::before, .elementor-17 .elementor-element.elementor-element-793980db .image-card-v3 .profile-image-card:after {
@@ -2637,7 +2637,7 @@ body.rtl .elementor-17 .elementor-element.elementor-element-1b7621c7 {
 }
 
 .elementor-17 .elementor-element.elementor-element-793980db>.elementor-widget-container {
-    margin: 35px 0 0 55px;
+    margin: 100px 0 0 35px;
 }
 
 .elementor-17 .elementor-element.elementor-element-61700b11:not(.elementor-motion-effects-element-type-background), .elementor-17 .elementor-element.elementor-element-61700b11>.elementor-motion-effects-container>.elementor-motion-effects-layer {
@@ -4007,6 +4007,10 @@ body.rtl .elementor-17 .elementor-element.elementor-element-4a105983 {
     .elementor-17 .elementor-element.elementor-element-63ebbb67 .elementor-heading-title {
         font-size: 16px;
     }
+
+    .elementor-17 .elementor-element.elementor-element-37882acf > .elementor-element-populated {
+        padding: 0;
+    }
 }
 
 @media(max-width:767px) {
@@ -4285,5 +4289,18 @@ body.rtl .elementor-17 .elementor-element.elementor-element-4a105983 {
     }
     body.rtl .elementor-17 .elementor-element.elementor-element-4a105983 {
         right: 2px;
+    }
+
+    .elementor-17 .elementor-element.elementor-element-4f01f7f9 > .elementor-element-populated {
+        margin: 0;
+        padding: 0;
+    }
+
+    .elementor-17 .elementor-element.elementor-element-793980db>.elementor-widget-container {
+        margin: 0;
+    }
+
+    .elementor-section .elementor-inner-section .elementor-element .elementor-element-5f2b9d27 .elementor-section-boxed .elementor-section-height-default .elementor-section-height-default {
+        width: auto;
     }
 }
